--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
     <script src="index.js" defer></script>
 </head>
 <body>
+
+    <div class="calculator">
+        <input id="display" readonly>
+        <div id="keys">
+            <button onclick="appendToDisplay('+')" class="operatorButton">+</button>
+            <button onclick="appendToDisplay('7')">7</button>
+            <button onclick="appendToDisplay('8')">8</button>
+            <button onclick="appendToDisplay('9')">9</button>
+
+            <button onclick="appendToDisplay('-')" class="operatorButton">-</button>
+            <button onclick="appendToDisplay('4')">4</button>
+            <button onclick="appendToDisplay('5')">5</button>
+            <button onclick="appendToDisplay('6')">6</button>
+
+            <button onclick="appendToDisplay('*')" class="operatorButton">*</button>
+            <button onclick="appendToDisplay('1')">1</button>
+            <button onclick="appendToDisplay('2')">2</button>
+            <button onclick="appendToDisplay('3')">3</button>
+
+            <button onclick="appendToDisplay('/')" class="operatorButton">/</button>
+            <button onclick="appendToDisplay('0')">0</button>
+            <button onclick="appendToDisplay('.')">.</button>
+            <button onclick="displayResult">=</button>
+
+            <button onclick="clearDisplay" class="operatorButton">C</button>
+            
+        </div>
+
+    </div>
     
 </body>
 </html>
