Add functions for their respective onclick events

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <button onclick="appendToDisplay('/')" class="operatorButton">/</button>
             <button onclick="appendToDisplay('0')">0</button>
             <button onclick="appendToDisplay('.')">.</button>
-            <button onclick="displayResult">=</button>
+            <button onclick="calculate()">=</button>
 
-            <button onclick="clearDisplay" class="operatorButton">C</button>
+            <button onclick="clearDisplay()" class="operatorButton">C</button>
             
         </div>
 
