Minor style changes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button onclick="appendToDisplay('.')">.</button>
             <button onclick="calculate()">=</button>
 
-            <button onclick="clearDisplay()" class="operatorButton">C</button>
+            <button onclick="clearDisplay()" class="operatorButton">AC</button>
             
         </div>
 
